@@ -48,6 +48,8 @@ Changes in version 0.1.2.8-alpha - 2007-??-??
       wants (because it has received fresh networkstatuses in the meantime),
       do not warn the user.  Cache the descriptor if we're a cache; drop it
       if we aren't.
+    - Make earlier entry guards _really_ get retried when the network comes
+      back online.
 
   o Minor features (controller):
     - Warn the user when an application uses the obsolete binary v0
